style.css
.theme0{
    --bodyBg: hsl(222, 26%, 31%);
    --numpadBg: hsl(223, 31%, 20%);
    --screenBg: hsl(224, 36%, 15%);
    --keyBg: hsl(30, 25%, 89%);
    --keyShadow: hsl(28, 16%, 65%);
    --keyText: hsl(221, 14%, 31%);
    --delBg: hsl(225, 21%, 49%);
    --delShadow:hsl(224, 28%, 35%);
    --equBg:hsl(6, 63%, 50%);
    --equShadow:hsl(6, 70%, 34%);
    --equText:#fff;
    --logoColor:#fff;
}

.theme1{
    --bodyBg:hsl(0, 0%, 90%);
    --numpadBg:hsl(0, 5%, 81%);
    --screenBg:hsl(0, 0%, 93%);
    --keyBg:hsl(45, 7%, 89%);
    --keyShadow:hsl(35, 11%, 61%);
    --equBg:hsl(25, 98%, 40%);
    --equShadow:hsl(25, 99%, 27%);
    --delBg:hsl(185, 42%, 37%);
    --delShadow:hsl(185, 58%, 25%);
    --logoColor:hsl(60, 10%, 19%);
    --keyText:hsl(60, 10%, 19%);
    --equText:#fff;
}

.theme2{
    --bodyBg:hsl(268, 75%, 9%);
    --numpadBg:hsl(268, 71%, 12%);
    --screenBg:hsl(268, 71%, 12%);
    --keyBg:hsl(268, 47%, 21%);
    --keyShadow:hsl(290, 70%, 36%);
    --equBg:hsl(176, 100%, 44%);
    --equShadow:hsl(177, 92%, 70%);
    --delBg:hsl(281, 89%, 26%);
    --delShadow:hsl(285, 91%, 52%);
    --logoColor:hsl(52, 100%, 62%);
    --keyText:hsl(52, 100%, 62%);
    --equText:hsl(198, 20%, 13%);
}

*{margin:0;padding:0;font-family: Spartan;box-sizing: border-box;font-weight: 700;}
*:hover,*:focus{outline:none}

body{
    background-color: var(--bodyBg);
    display: flex;
    align-items: center;
    min-height: 100vh;
    justify-content: center;
}

#calculator{
    display: flex;
    flex-direction: column;
    gap:1.25rem
}

#calc{
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    margin-bottom:.5rem;
}

#logo{
    font-size:1.5rem;
    color:var(--logoColor);
}

#toggle{
    display: flex;
    align-items: flex-end;
    gap:1.5rem;
    padding-bottom:.25rem
}

#thm{
    text-transform: uppercase;
    font-size:.6rem;
    color:var(--logoColor);
    font-weight: 700;
    padding-bottom: .15rem;
}

#tgl{
    display: flex;
    flex-direction: column;
    gap:.1rem
}

#top b{
    font-size:.6rem;
    color:var(--logoColor);
    padding:0 .25rem;
    font-weight:700;
}

#top b:first-child{
    padding-left:.5rem;
}

#top b:last-child{
    padding-right:.5rem;
}

#tog{
    width:100%;
    background:var(--numpadBg);
    height:1.25rem;
    border-radius: .65rem;
    position: relative;
    display: flex;
    padding:.2rem;
}

.theme0 #tog{
    justify-content: flex-start;
}

.theme1 #tog{
    justify-content: center;
}

.theme2 #tog{
    justify-content: flex-end;
}

#tglBall{
    width:.85rem;
    height:.85rem;
    background: var(--equBg);
    border-radius: 50%;
}

#screen{
    text-align: right;
    font-size:3rem;
    color:var(--logoColor);
    padding:1.5rem;
    background: var(--screenBg);
    border-radius: .5rem;
    overflow-x: auto;
}

#numpadcontain{
    width:100%;
    overflow:hidden;
    position:relative;
    background-color: var(--numpadBg);
    padding:1.25rem;
    border-radius:.75rem;
}

#numpad{
    display:grid;
    grid-template-areas:
    'num7 num8 num9 del'
    'num4 num5 num6 pls'
    'num1 num2 num3 mns'
    'dot num0 dvd times'
    'res res equ equ';
    gap:1rem;
    height:100%;
    grid-auto-columns: 1fr;
    grid-auto-flow: column;
}

#numpad button{
    font-size:1.75rem;
    padding:.8rem 1.75rem .5rem;
    border-radius:.5rem;
    background-color: var(--keyBg);
    border:0;
    color:var(--keyText);
}

#numpad button:active{
    transform: translateY(.3rem);
    box-shadow:0 0 0;
}

.numberBtn,#mns,#dvd,#pls,#times{
    box-shadow:0 .3rem var(--keyShadow);
}

#res{
    font-size:1rem !important; 
    background-color: var(--delBg) !important;
    box-shadow:0 .3rem var(--delShadow) ;
    color:#fff !important;
    font-weight: 600;
}

#equ{
    font-size:1.25em !important;
    background-color: var(--equBg) !important;
    box-shadow:0 .3rem var(--equShadow);
    color:var(--equText) !important;
}

#del{
    font-size:1rem !important;
    background-color: var(--delBg) !important;
    box-shadow:0 .3rem var(--delShadow);
    color:#fff !important;
    font-weight: 600;
}

#num7{grid-area: num7;}#num8{grid-area: num8;}#num9{grid-area: num9;}#del{grid-area: del;}
#num4{grid-area: num4;}#num5{grid-area: num5;}#num6{grid-area: num6;}#pls{grid-area: pls;}
#num1{grid-area: num1;}#num2{grid-area: num2;}#num3{grid-area: num3;}#mns{grid-area: mns;}
#dot{grid-area: dot;}#num0{grid-area: num0;}#dvd{grid-area: dvd;}#times{grid-area: times;}
#res{grid-area: res;}#equ{grid-area: equ;}

.attribution{
    display:none;       /*ŞİMDİLİK*/
	font-size:10px;
	text-align:center;
	padding:10px;
	background:linear-gradient(45deg,#444 0%,#222 50%,#069 50%,#046 100%);
	color:#ddd;
	}
	
.attribution a{
	color:#ee0;
	text-decoration:none;
	}
	
.attribution a:hover{
	text-decoration:underline;
	}

@media screen and (max-width: 699px){
    #logo{
        font-size:1.75rem;
    }

    #thm{
        font-size:.7rem
    }

    #top b{
        font-size:.6rem;
        padding:0 0.35rem
    }

    #calculator{
        width:100%;
        height:100vh;
        padding:1.25rem;
    }

    #numpadcontain{
        padding:1.25rem
    }

    #numpad{
        gap: .75rem;
    }

    #numpad button{
        padding:1rem 0 .7rem;
        font-size:1.5rem;
    }
}

@media screen and (min-width:700px) {
    
#screen::-webkit-scrollbar {
    height:3px
  }
  
  /* Track */
  #screen::-webkit-scrollbar-track {
    background: transparent;
  }
  
  /* Handle */
  #screen::-webkit-scrollbar-thumb {
    background: var(--equBg);
  }
  
  /* Handle on hover */
  #screen::-webkit-scrollbar-thumb:hover {
    background: var(--delBg);
  }

}

